# prelegal

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  catalog.json
backend/: main.py  pyproject.toml
backend/app/: database.py
backend/app/routers/: auth.py  chat.py  chat_multi.py  documents.py
backend/tests/: conftest.py  test_auth.py  test_chat.py  test_chat_multi.py  test_documents.py
frontend/: package-lock.json  package.json  playwright.config.ts  vitest.config.mts
frontend/e2e/: nda-creator.spec.ts
frontend/playwright-report/: index.html
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/components/: AiChatWizard.tsx  AuthModal.tsx  GenericDocumentPreview.tsx  MyDocumentsModal.tsx  NdaForm.tsx  NdaPreview.tsx  NdaWizard.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/lib/: ndaRenderer.ts
frontend/src/test/: NdaForm.test.tsx  NdaPreview.test.tsx  ndaRenderer.test.ts
frontend/src/types/: documents.ts  nda.ts
scripts/: start-linux.sh  start-windows.ps1  stop-linux.sh  stop-windows.ps1
templates/: CSA.md  LICENSE.txt  Partnership-Agreement.md  Pilot-Agreement.md  Software-License-Agreement.md  psa.md
